--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -12,24 +13,17 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
-    background-color: rgba(255, 255, 255, 0.4);
+    padding: 15px 20px;
+    background-color: rgba(255, 255, 255, 1);
     position: fixed;
     width: 100%;
-    top: 0;
-    left: 0;
+    height: 80px;
     z-index: 1000;
 }
 
 .logo {
-    width: 20px;
-    height: 50px;
-    margin-right: 10px;
-}
-
-h1 {
-    font-size: 1.2rem;
-    color: #333;    
+    margin-top: 10px;
+    margin-left: 50px;
 }
 
 .menu {
@@ -38,9 +32,12 @@ h1 {
 
 .menu-toggle {
     text-decoration: none;
-    color: #333;
+    color: #000000;
+    margin-right: 10px;
 }
 
 main {
     padding-top: 80px;
 }
+
+
