--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,44 @@
-
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
     box-sizing: border-box;
 }
 
-body {
-    background-color: #f7f7e8;
+nav {
+    background: #fff8ed;
+    height: 80px;
+    width: 100%;
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 20px;
-    background-color: rgba(255, 255, 255, 1);
-    position: fixed;
-    width: 100%;
-    height: 80px;
-    z-index: 1000;
+.enlace {
+    position: absolute;
+    padding: 20px 50px;
 }
 
 .logo {
-    margin-top: 10px;
-    margin-left: 50px;
+    height: 50px;
 }
 
-.menu {
-    font-size: 1.5rem;
+nav ul {
+    float: right;
+    margin-right: 20px;
 }
 
-.menu-toggle {
-    text-decoration: none;
-    color: #000000;
-    margin-right: 10px;
+nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
 }
 
-main {
-    padding-top: 80px;
+nav ul li a {
+    color: black;
+    font-size: 18px;
+    padding: 7px 13px;
 }
 
-
+li a:hover {
+    border: #000000 0.5px solid;
+    border-radius: 115px;
+}
